--- a/frontend/pages/hosts/ManageHostsPage/_styles.scss
+++ b/frontend/pages/hosts/ManageHostsPage/_styles.scss
@@ -259,4 +259,16 @@
   .total-issues-count {
     margin-left: $pad-small;
   }
+
+  &__export-btn {
+    padding-left: $pad-medium;
+
+    img {
+      width: 13px;
+      height: 13px;
+      margin-left: 8px;
+      position: relative;
+      top: -2px;
+    }
+  }
 }
