--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/AgentOptionsPage/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/AgentOptionsPage/_styles.scss
@@ -1,17 +1,25 @@
 .agent-options {
   font-size: $x-small;
 
+  &__page-description {
+    padding-top: 40px;
+    padding-bottom: $pad-medium;
+    margin: 0;
+  }
+
+  &__form-wrapper {
+    margin-top: 20px;
+  }
+
   a {
     color: $core-vibrant-blue;
     font-size: $x-small;
     font-weight: $bold;
     text-decoration: none;
   }
+
   .icon {
     width: 12px;
     height: 12px;
-  }
-  &__form-wrapper {
-    margin-top: 20px;
   }
 }
