--- a/frontend/pages/hosts/details/DeviceUserPage/_styles.scss
+++ b/frontend/pages/hosts/details/DeviceUserPage/_styles.scss
@@ -396,43 +396,43 @@
     box-shadow: inset -8px 0 17px -10px #e8edf4;
   }
 
-  &__table {
-    width: 100%;
-    border-collapse: collapse;
-    color: $core-fleet-black;
-    font-size: $x-small;
-  }
-  tr {
-    border-bottom: 1px solid $ui-fleet-blue-15;
+  // &__table {
+  //   width: 100%;
+  //   border-collapse: collapse;
+  //   color: $core-fleet-black;
+  //   font-size: $x-small;
+  // }
+  // tr {
+  //   border-bottom: 1px solid $ui-fleet-blue-15;
 
-    &:last-child {
-      border-bottom: 0;
-    }
-  }
+  //   &:last-child {
+  //     border-bottom: 0;
+  //   }
+  // }
 
-  thead {
-    background-color: $ui-off-white;
-    color: $core-fleet-black;
-    text-align: left;
-    border-bottom: 1px solid $ui-fleet-blue-15;
+  // thead {
+  //   background-color: $ui-off-white;
+  //   color: $core-fleet-black;
+  //   text-align: left;
+  //   border-bottom: 1px solid $ui-fleet-blue-15;
 
-    th {
-      padding: $pad-medium 27px;
-      white-space: nowrap;
-      border-right: 1px solid $ui-fleet-blue-15;
+  //   th {
+  //     padding: $pad-medium 27px;
+  //     white-space: nowrap;
+  //     border-right: 1px solid $ui-fleet-blue-15;
 
-      &:last-child {
-        border-right: none;
-      }
-    }
-  }
+  //     &:last-child {
+  //       border-right: none;
+  //     }
+  //   }
+  // }
 
-  tbody {
-    td {
-      padding: 12px 27px;
-      white-space: nowrap;
-    }
-  }
+  // tbody {
+  //   td {
+  //     padding: 12px 27px;
+  //     white-space: nowrap;
+  //   }
+  // }
 
   .tooltip__tooltip-icon {
     img {
@@ -440,14 +440,6 @@
       height: 16px;
       width: auto;
     }
-  }
-
-  .software-name {
-    margin-left: 8px;
-  }
-
-  .software-last-used-muted {
-    color: $ui-fleet-black-50;
   }
 
   .buttons {
