--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/_styles.scss
@@ -5,6 +5,17 @@
     padding: $pad-xxlarge;
   }
 
+  // &.team-select-open {
+  //   .component__tabs-wrapper {
+  //     position: relative;
+  //     z-index: 2;
+  //   }
+  //   .members {
+  //     position: relative;
+  //     z-index: 1;
+  //   }
+  // }
+
   &__loading-spinner {
     // NOTE: this value was chosen just cause it looked right. Might want to
     // come back and change it later to be more exact.
@@ -36,6 +47,9 @@
   &__team-details {
     display: flex;
     align-items: center;
+    .form-field--dropdown {
+      margin-bottom: 0;
+    }
   }
 
   &__host-count {
