--- a/frontend/pages/hosts/details/cards/Users/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Users/_styles.scss
@@ -1,35 +1,21 @@
-.users {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  font-size: $x-small;
+.section--users {
+  margin-top: $pad-medium;
+  .data-table-block {
+    .data-table__table {
+      thead {
+        .username__header {
+          width: $col-md;
+        }
 
-  &__tile {
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__tile-count {
-    font-size: $large;
-
-    &:before {
-      border-radius: 100%;
-      content: " ";
-      display: inline-block;
-      margin-right: $pad-small;
-      height: 8px;
-      width: 8px;
-      margin-bottom: 5px;
-    }
-
-    &--online:before {
-      background-color: $ui-success;
-    }
-
-    &--offline:before {
-      background-color: $ui-offline;
+        .shell__header {
+          width: $col-md;
+        }
+        @media (min-width: $break-768) {
+          .username__header {
+            width: $col-lg;
+          }
+        }
+      }
     }
   }
 }
