--- a/frontend/pages/schedule/ManageSchedulePage/_styles.scss
+++ b/frontend/pages/schedule/ManageSchedulePage/_styles.scss
@@ -92,73 +92,6 @@
     }
   }
 
-  // &__details {
-  //   display: inline-flex;
-  //   vertical-align: middle;
-  //   margin-left: $pad-small;
-  //   margin-top: -20px;
-
-  //   .hint {
-  //     color: $core-fleet-black;
-
-  //     &--brand {
-  //       color: $core-vibrant-blue;
-  //     }
-  //   }
-  // }
-
-  &__all-teams-table {
-    // .table-container__header {
-    //   height: 0;
-    // }
-
-    // th {
-    //   border-right: 1px solid #e2e4ea !important;
-    // }
-    .data-table-block {
-      .data-table__table {
-        thead {
-          .query_name__header {
-            width: $col-lg;
-          }
-          .interval__header {
-            width: 0;
-          }
-          .performance__header {
-            display: none;
-            width: 0;
-          }
-          @media (min-width: $break-990) {
-            .performance__header {
-              display: table-cell;
-              width: $col-lg;
-            }
-          }
-        }
-        tbody {
-          .query_name__cell {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-          }
-          .interval__cell {
-            width: 0;
-          }
-          .performance__cell {
-            display: none;
-            width: 0;
-          }
-          @media (min-width: $break-990) {
-            .performance__cell {
-              display: table-cell;
-              width: $col-lg;
-            }
-          }
-        }
-      }
-    }
-  }
-
   .schedule-list-wrapper {
     .data-table-block {
       .data-table__table {
@@ -167,33 +100,44 @@
             width: $col-lg;
           }
           .interval__header {
-            width: 0;
+            width: auto;
           }
           .performance__header {
             display: none;
             width: 0;
           }
-          @media (min-width: $break-990) {
+          .actions__header {
+            width: auto;
+          }
+          @media (min-width: $break-1400) {
+            .interval__header {
+              width: 0;
+            }
             .performance__header {
               display: table-cell;
               width: $col-lg;
+              border-left: 1px solid $ui-fleet-blue-15;
             }
           }
         }
         tbody {
           .query_name__cell {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
+            width: $col-lg;
           }
           .interval__cell {
-            width: 0;
+            width: auto;
           }
           .performance__cell {
             display: none;
             width: 0;
           }
-          @media (min-width: $break-990) {
+          .actions__cell {
+            width: auto;
+          }
+          @media (min-width: $break-1400) {
+            .interval_cell {
+              width: 0;
+            }
             .performance__cell {
               display: table-cell;
               width: $col-lg;
@@ -209,83 +153,10 @@
       text-decoration: none;
     }
 
-    border-collapse: collapse;
-
-    &__wrapper {
-      border: 1px solid $ui-fleet-blue-15;
-      border-radius: 4px;
-      overflow: hidden;
-      margin-top: $pad-medium;
-    }
-
-    thead {
-      background-color: $ui-off-white;
-      border-bottom: 1px solid $ui-fleet-blue-15;
-
-      th {
-        font-size: $x-small;
-        font-weight: $bold;
-        text-align: left;
-        padding: $pad-medium $pad-large;
-
-        &:nth-child(2) {
-          width: calc(49% - 20px);
-        }
-
-        &:nth-child(3) {
-          width: 20%;
-          max-width: 150px;
-        }
-
-        &:nth-last-child(2) {
-          border-right: 0;
-        }
-
-        &:last-child {
-          width: 150px;
-          border-left: 0;
-        }
-        .performance__header {
-          width: 20% !important;
-        }
-      }
-    }
-
-    &__th-pack-name {
-      padding-left: 0;
-      text-align: left;
-    }
-
-    &__select-all {
-      margin-bottom: 0;
-    }
-
     &__empty-table {
       text-align: center;
       font-size: $x-small;
       color: $core-fleet-black;
-    }
-
-    &__scheduled-query-count {
-      color: $core-fleet-black;
-      font-size: $x-small;
-      font-weight: $bold;
-      margin: 0 12px 0 0;
-      display: inline-block;
-    }
-
-    .queries-table__performance-impact-header {
-      margin-right: $pad-small;
-    }
-
-    .queries-table__performance-impact-tooltip {
-      font-weight: 400;
-    }
-
-    .column-with-tooltip {
-      height: 0;
-      position: relative;
-      top: -10px;
     }
   }
 
